<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PickUp!</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Add</string>
    <string name="service_state">Service - </string>
    <string name="button_send">Add</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">Your Message</string>
    <string name="title_activity_contact_picker">ContactPickerActivity</string>
    <string name="title_activity_hidden">HiddenActivity</string>
    <string name="table_title">Whitelisted Contacts</string>
    <string name="title_activity_settings">PickUp! Settings</string>
    <string name="AboutApp">PickUp! keeps you from missing important calls from your beloved ones by overriding the Silent/Vibrate settings when they 
        call you repeatedly. The device goes back to the previous sound mode (Silent/Vibrate) after the call.</string>
    <string name="settings_part1">The device will ring if a Whitelisted contact calls you.... </string>
    <string name="settings_part2"> times within </string>
    <string name="settings_part3"> minutes </string>
    <string name="noOfTimes">2</string>
    <string name="duration">5</string>
    <string name="setup">Setup</string>
    <string name="SettingsHeader">About PickUp!</string>
    <string name="SettingsSave">Save</string>
    <string name="title_activity_logs">PickUp! Logs</string>
    <string name="logs_message">Details of calls that were brought to your attention by PickUp which you might have missed otherwise. :)</string>
	<string name="ClearLogs">Clear</string>
	<string name="LogsMessage">Ring Logs: </string>
</resources>
