<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    android:screenOrientation="portrait">

    <ListView
        android:id="@+id/listView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/serviceStateId"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp" >
    </ListView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listView"
        android:layout_below="@+id/serviceStateId"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="30dp"
        android:text="@string/table_title"
        android:textSize="16sp" />

    <Button
        android:id="@+id/serviceStateChg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/serviceStateId"
        android:layout_alignBottom="@+id/serviceStateId"
        android:layout_marginLeft="29dp"
        android:layout_toRightOf="@+id/textView1"
        android:minHeight="30dip" 
        android:onClick="stateChange"/>

    <TextView
        android:id="@+id/serviceStateId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="24dp"
        android:text="@string/service_state"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/serviceStateChg"
        android:layout_alignRight="@+id/serviceStateChg"
        android:minHeight="30dip"
        android:text="@string/edit_message" 
        android:onClick="sendMessage"/>

</RelativeLayout>